fix(auth,ui,api): alignement maquette, session persist via sessionStorage, modèle profile, persistance token côté thunk

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -58,15 +58,6 @@ body {
   color: #42b983;
 }
 
-.main-nav-item {
-  text-decoration: none;
-  margin-right: 0.5rem;
-}
-
-.main-nav-item:hover {
-  text-decoration: underline;
-}
-
 .main-nav-logo {
   display: flex;
   align-items: center;
@@ -181,10 +172,6 @@ body {
   padding: 2rem;
 }
 
-.sign-in-icon {
-  font-size: 5rem;
-}
-
 .input-remember {
   display: flex;
 }
@@ -291,11 +278,17 @@ body {
 }
 
 .main-nav-item {
+  margin-right: 0.5rem;
   width: 15vw;
   display: flex;
+  text-decoration: none;
   align-items: center;
   justify-content: flex-end;
-  gap: 1rem;
+  gap: 0.77rem;
+}
+
+.main-nav-item:hover {
+  text-decoration: underline;
 }
 
 .edit-form {
